--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An implementation of mine sweeper, made as an exercise in a Javascript workshop",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mochify -R progress test/*.js"
   },
   "repository": {
     "type": "git",
@@ -16,7 +16,20 @@
     "url": "https://github.com/tobiasgwaaler/jsminesweeper/issues"
   },
   "homepage": "https://github.com/tobiasgwaaler/jsminesweeper#readme",
-  "testDependencies": {
-    "mocha": "^2.3.4"
+  "devDependencies": {
+    "babel-preset-es2015": "^6.1.18",
+    "babelify": "^7.2.0",
+    "browserify": "~12.0.1",
+    "chai": "^3.4.1",
+    "http-server": "~0.8.5",
+    "mochify": "~2.14.0",
+    "opener": "^1.4.1",
+    "parallelshell": "^2.0.0",
+    "watchify": "~3.5.0"
+  },
+  "browserify": {
+    "transform": [
+      ["babelify", {"presets": "es2015"}]
+    ]
   }
 }
