--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "mochify": "~2.14.0",
     "opener": "^1.4.1",
     "parallelshell": "^2.0.0",
-    "watchify": "~3.5.0"
+    "watchify": "~3.5.0",
+    "lodash":  "3.10.1"
   },
   "browserify": {
     "transform": [
